# cmus-bpmrecognition

./: .gitignore  Doxyfile  Makefile  Readme.md  base64.c  base64.h  bpmread.c  bpmread.h  buffer.h  cache.c  cache.h  config.h.in  configure  configure.ac  input.c  options.c  output.c  prog.c  soundtouch-wrapper.h  ui_curses.h  xmalloc.h
include/: id3.h  sampleconvert.h  sf.h
src/: base64.c  bpmread.c  cache.c  comment.c  debug.c  input.c  keyval.c  lib.c  main.c  output.c  player.c  sampleconvert.c  soundtouch-wrapper.cpp  track_info.c  uchar.c
